@@ -127,6 +127,7 @@ def callGenomeSegment(self, gsegGroup, segFiles, taskPrefix="", dependencies=Non
 
     segCmd.extend(["--gvcf-output-prefix", self.paths.getTmpSegmentGvcfPrefix(gid)])
     segCmd.extend(['--gvcf-min-gqx','15'])
+    segCmd.extend(['--gvcf-min-homref-gqx','15'])
     segCmd.extend(['--gvcf-max-snv-strand-bias','10'])
     segCmd.extend(['-min-qscore','17'])
     segCmd.extend(['-bsnp-ssd-no-mismatch', '0.35'])
